--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-python-telegram-bot==13.7
 beautifulsoup4==4.12.2
-requests==2.31.0
 python-dotenv
 uvicorn==0.23.2
-fastapi==0.103.0
+aiogram==3.0.0
