--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ aiogram==3.0.0
 gunicorn==21.2.0
 phonenumbers==8.13.20
 pytz==2023.3
-cryptography=41.0.2
+cryptography==41.0.2
 google-api-python-client==2.104.0
 google-auth==2.23.3
 google-auth-httplib2==0.1.1
